--- a/src/styles/ToTopArrow.scss
+++ b/src/styles/ToTopArrow.scss
@@ -5,14 +5,14 @@
     right: 70px;
 }
 
-.arrow {
+.arrowup {
     width: 70px;
     height: 70px;
     transform: translateX(300%);
     transition: all .5s ease-in-out;
 }
 
-.arrow.is-shown{
+.arrowup.is-shown{
     transform: translateX(0%);
   }
 
@@ -21,7 +21,7 @@
         bottom: 30px;
         right: 10px;
     }
-    .arrow{
+    .arrowup{
         width: 50px;
         height: 50px;
     }
